nginx-controller/mynginx_echo/ingress-mynginx-echo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynginx-echo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: alexr-nginx-service-echo
      port:
        name: http
  rules:
    - host: mynginx.example.com
      http:
        paths:
          - path: /first/(.*)/foo
            pathType: ImplementationSpecific
            backend:
              service:
                name: alexr-nginx-service-echo
                port:
                  name: http
          - path: /second(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: alexr-nginx-service-echo
                port:
                  name: http
